--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,25 @@ form {
   margin: 0 auto;
 }
 
-.btn {
-  font-size: 0.7rem;
+.navbar-brand {
+  padding: 0;
+}
+
+.btn,
+.navbar-brand {
+  font-size: 0.8rem;
+  width: 90px;
+}
+
+.btn-danger {
+  width: 110px;
+}
+
+.upload {
+  width: 200px;
+}
+
+.logo-acceuil {
+  width: 40px;
+  height: 40px;
 }
