--- a/src/components/Upload.css
+++ b/src/components/Upload.css
@@ -1,6 +1,13 @@
+.container-img-upload {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
 .circular-progress-bar {
-  width: 50px;
-  height: 50px;
+  width: 150px;
+  height: 150px;
   margin: 0 auto;
 }
 
@@ -8,7 +15,8 @@
   width: 200px;
 }
 
-img {
-  width: 300px;
-  height: 300px;
+.img-profil {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
 }
