--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,9 @@ form {
   width: 40px;
   height: 40px;
 }
+
+.card-grid {
+  display: inline-flex;
+  justify-content: space-around;
+  padding: 30px 20px 0;
+}
